# ci-agent-demo

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cs_mvp/: __init__.py  artifacts.py  cli.py  config.py  db.py  graph.py  models.py  report_style_audit.py  review_queue.py
cs_mvp/agents/: __init__.py  analyst.py  analyst_grouping.py  writer.py  (+10 more)
demo/: README.md  backup_case.json  demo_manifest.json  main_case.json  run_demo.ps1  run_demo.sh
docs/: AGENT_ROLES.md  DEMO_GUIDE.md  OPERATIONS.md  SCHEMA.md  case_ai_writing_assistants.md
scripts/: evaluate_claims.py  evaluate_evidence.py  replay_artifacts.py  report_quality_check.py
tests/: test_analyst_grouping.py  test_analyst_real.py  test_artifacts_summary.py  test_capability_contracts.py  test_chunker.py  test_citation.py  test_collector_real.py  test_collector_reliability.py  test_competitor_disambiguation.py  test_demo_manifest.py  test_e2e_mock_dag.py  test_evaluate_claims.py  test_export_html.py  test_extractor_real.py  test_fetch.py  test_gap_fill.py  test_interview_story_docs.py  test_llm_provider.py  test_models.py  test_observability.py  test_ppt_builder.py  test_ppt_visual_builder.py  test_prompt_family.py  test_qa_critic.py  test_qa_models.py  test_query_translation.py  test_report_pm_export.py  test_report_style_audit.py  test_rescue.py  test_review_queue.py  test_revision_dashboard.py  test_revision_loop.py  test_role_cards.py  test_scripts_v03.py  test_search_fix.py  test_seed_urls.py  test_semantic_judge.py  test_url_utils.py  test_v1_4_polish.py  test_v1_5_batch_1.py  (+6 more)
(+79 files in other folders)
