[project]
name = "cs-mvp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "typer>=0.12",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "tavily-python>=0.5",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "tiktoken>=0.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langfuse>=2.50,<3",
    "python-pptx>=0.6.23",
]

[project.scripts]
cs-mvp = "cs_mvp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-playwright>=0.6",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "mypy>=1.13",
    "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "cs_mvp.observability.*",
    "cs_mvp.agents.role_card",
    "cs_mvp.agents.role_cards.*",
    "cs_mvp.prompts.families.*",
]
disallow_untyped_defs = true

[tool.coverage.run]
source = ["cs_mvp"]
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
